--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/node": "^2.16.8",
     "@remix-run/react": "^2.16.8",
     "@remix-run/serve": "^2.16.8",
+    "@vercel/remix": "^2.16.7",
     "isbot": "^4.1.0",
     "prisma": "^6.12.0",
     "react": "^18.2.0",
